--- a/grid.css
+++ b/grid.css
@@ -9,7 +9,9 @@
   /*grid stuff */
   display: grid;
   /* grid-template-columns: repeat(3, 200px); */
-  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-columns: 1fr minmax(200px, 1fr) 1fr;
+  
   grid-template-rows: repeat(4, 100px);
   grid-gap:10px;
   
