--- a/grid.css
+++ b/grid.css
@@ -10,25 +10,28 @@
   display: grid;
   /* grid-template-columns: repeat(3, 200px); */
   /* grid-template-columns: repeat(3, 1fr); */
-  grid-template-columns: 1fr minmax(200px, 1fr) 1fr;
+  /* grid-template-columns: 1fr minmax(200px, 1fr) 1fr; */
+  grid-template-columns: repeat(auto-fit,100px);
+  grid-template-columns: repeat(auto-fill,100px);
   
   grid-template-rows: repeat(4, 100px);
   grid-gap:10px;
   
 }
 
+
 header{
   /* grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3; */
-  grid-column: 1/4;
-  grid-row: 1/3;
+  /* grid-column: 1/4;
+  grid-row: 1/3; */
 }
 aside{
   /* grid-column-start: 2;
   grid-column-end: 4; */
-  grid-column: 2/4;
+  /* grid-column: 2/4; */
 }
 .s {
   padding: 20px;
