--- a/grid.css
+++ b/grid.css
@@ -8,14 +8,15 @@
   height: 100vh;
   /*grid stuff */
   display: grid;
-  /* grid-template-columns: repeat(3, 200px); */
+  grid-template-columns: repeat(3, 200px);
   /* grid-template-columns: repeat(3, 1fr); */
   /* grid-template-columns: 1fr minmax(200px, 1fr) 1fr; */
-  grid-template-columns: repeat(auto-fit,100px);
-  grid-template-columns: repeat(auto-fill,100px);
-  
+  /* grid-template-columns: repeat(auto-fit,100px);
+  grid-template-columns: repeat(auto-fill,100px); */
   grid-template-rows: repeat(4, 100px);
   grid-gap:10px;
+  justify-content: center;
+  align-items: center;
   
 }
 
