--- a/grid.css
+++ b/grid.css
@@ -22,6 +22,7 @@
 
 
 header{
+  order:1;
   /* grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 1;
@@ -30,6 +31,7 @@ header{
   grid-row: 1/3; */
 }
 aside{
+  order:2; /*highest value at the bottom */
   /* grid-column-start: 2;
   grid-column-end: 4; */
   /* grid-column: 2/4; */
