--- a/grid.css
+++ b/grid.css
@@ -8,21 +8,31 @@
   height: 100vh;
   /*grid stuff */
   display: grid;
-  grid-template-columns: repeat(3, 200px);
+  grid-template-columns: repeat(5, 100px);
   /* grid-template-columns: repeat(3, 1fr); */
   /* grid-template-columns: 1fr minmax(200px, 1fr) 1fr; */
   /* grid-template-columns: repeat(auto-fit,100px);
   grid-template-columns: repeat(auto-fill,100px); */
-  grid-template-rows: repeat(4, 100px);
+  grid-template-rows: repeat(5, 100px);
   grid-gap:10px;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
+  grid-template-areas: 
+  "h h h h h"
+  "m m m m m"
+  "s s . a a"
+  "f f f f f"
+  ;
+
   
 }
 
 
 header{
   order:1;
+  /* grid-area size and location of a grid short for grid-row-start, end and column*/
+  grid-area: h;
+  /* align-self:flex-start ; */
   /* grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 1;
@@ -35,6 +45,16 @@ aside{
   /* grid-column-start: 2;
   grid-column-end: 4; */
   /* grid-column: 2/4; */
+  grid-area: a;
+}
+section{
+  grid-area: s;
+}
+main{
+  grid-area: m;
+}
+footer{
+  grid-area: f;
 }
 .s {
   padding: 20px;
