justify content between and around

--- a/flex.css
+++ b/flex.css
@@ -15,16 +15,18 @@ body{
   margin: 20px auto;
   /* flex box stuff - work on container */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   /* flex-direction: row-reverse; */
   /* flex-direction: column-reverse; */
   /* justify content - aligns content on the main axis */
-  justify-content:flex-end;
+  /* justify-content:center; */
+  justify-content:space-around;
+  justify-content:space-between;
 }
 .child{
   width: 50px;
   height: 50px;
   background: blue;
   text-align: center;
-  margin: 5px;
+  margin: 0px;
 }
