--- a/flex.css
+++ b/flex.css
@@ -25,8 +25,14 @@ body{
   /* flex-wrap: wrap-reverse; */
   /* flex-wrap: wrap; */
       /* align items - align items on the cross axis */
-  align-items: flex-end;    
-  align-items: center;    
+  /* align-items: flex-end;     */
+  /* align-items: center;     */
+      /* align content - distribution of space btn and around along 
+      flexbox cross axis */
+  flex-wrap: wrap;  
+  align-content: center;  
+  align-content: space-around;  
+  align-content: space-between;  
 }
 .child{
   width: 50px;
