--- a/flex.css
+++ b/flex.css
@@ -41,3 +41,11 @@ body{
   text-align: center;
   margin: 0px;
 }
+/* Order property specifies the order of flexible items relative to the 
+other items inside the container */
+.special{
+  order: 1;
+}
+.special-two{
+  order:2;
+}
