--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root{
+  --primary-color: teal;
+  --font-size: 4rem;
+  --bg-color: brown;
+  --p: 20px;
+
+}
 body{
     color: rgb(132, 146, 146);
 }
@@ -28,8 +35,13 @@ body{
   font-size: 5em;
   text-align: center;
   color: black;
-  
-  
 
-
+}
+.heading1{
+  color: var(--primary-color);
+}
+.heading2{
+  font-size: var(--font-size);
+  background: var(--bg-color);
+  padding: var(--p);
 }
