add coffee landing page

--- a/coffee-page/style.css
+++ b/coffee-page/style.css
@@ -47,3 +47,271 @@ li a:hover{
   border-bottom: 2px solid var(--main-color);
 }
 /* Nav ends */
+
+/* Header start */
+.header{
+  background: url(images/pexels-nao-triponez-129207.jpg);
+  background-position:center ;
+  background-size: cover;
+  height: 100vh;
+  font-family: "Playfair Display", serif;
+  font-weight: normal;
+  /* flexbox */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+  position: relative;
+}
+
+.main-heading{
+  position:absolute; /*precise placement */
+  top:8rem;
+  font-size:4rem;
+  word-spacing: 10px;
+  margin-top: -40px;
+  
+
+}
+.primary-heading{
+  position: absolute;
+  bottom: 4rem;
+  font-size:4rem;
+  word-spacing: 10px;
+  margin-bottom: -40px;
+}
+.main-btn{
+  position: absolute;
+  bottom: 2rem;
+  padding: 10px 30px;
+  margin-top: 20px;
+  background: transparent;
+  background: var(--main-color);
+  transform: translateY(60px)
+
+}
+
+/* our story section */
+#our-story{
+  height: 100vh;
+  margin-top:15%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+  align-items:center;
+  color: #fff;
+}
+
+.img{
+  width: 400px;
+  height: 400px;
+  background: url(images/pexels-chitokan-2183027-removebg-preview.png);
+  background-position: center;
+  background-size: cover
+
+}
+.title-style{
+  display: flex;
+  align-items: center;
+}
+
+.title{
+  font-family:"Playfair Display", serif ;
+  font-size: 4rem;
+  transform: translateX(-100px) ;
+}
+.line{
+  width: 100px;
+  height: 2px;
+  background: #fff;
+  transform:translateX(-120px) ;
+}
+.section-content p{
+  max-width:500px;
+  color: #fff;
+  font-family: sans-serif;
+  line-height: 20px;
+  margin: 20px 0px;
+
+}
+/* our story ends */
+
+/* coffee start */
+.coffee-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10rem;
+  color: #fff;
+
+}
+.content-section p{
+  max-width: 500px;
+}
+
+.img-2{ 
+  height: 400px;
+  width: 400px;
+
+}
+.title-two{
+  font-size:3rem;
+  font-family:"Playfair Display", serif ;
+  font-weight: normal;
+}
+
+/* Products */
+
+.products{
+  margin-top:5rem;
+  
+}
+
+.title-three{
+  font-size: 4rem;
+  margin-top: 10rem;
+  margin-left: 10rem;
+  margin-bottom:10rem;
+  color: #fff;
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content:space-around ;
+  align-items:center ;
+  color: #fff;
+}
+.card{
+  border: 2px solid var(--main-color);
+  padding: 0px 20px;
+  height: 400px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 5px;
+  position: relative;
+  margin-bottom: 4rem;
+
+}
+
+.card-img{
+  width: 100px;
+  height: 100px;
+  position:absolute;
+  top: -60px;
+  /* border: 2px solid var(--main-color); */
+
+}
+.img-one{
+  background: url(images/1.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.img-two{
+  background: url(images/2.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.img-three{
+  background: url(images/3.png);
+  background-position: center;
+  background-size: cover;
+}
+.card.title{
+  font-family:"Playfair Display", serif;
+  margin-top: 50px;
+}
+
+.card.items p{
+  margin: 20px 0px;
+  font-family: sans-serif;
+}
+/* product end */
+
+/* footer start */
+footer{
+  height: 50vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-family: sans-serif
+}
+footer .container{
+  margin:20px;
+  max-width: 300px;
+  text-align: center;
+}
+
+footer .heading-info{
+  margin-bottom:20px ;
+}
+
+footer p{
+  line-height:25px ;
+
+}
+span{
+  color:var(--main-color);
+}
+
+.para{
+font-family: sans-serif;
+text-align: center;
+margin-top: 20px;
+
+}
+/* Project end  */
+
+/* responsiveness */
+@media only screen and (max-width:768px){
+  .main-headings,
+  .primary-heading{
+    font-size: 2.5rem;
+  }
+
+  #our-story{
+    text-align: center;
+  }
+
+  #our-story .title{
+    transform:translateX(100px) ;
+    /* margin-bottom: 20px; */
+  }
+
+  #our-story .line{
+    display: none;
+  }
+
+  .content-section{
+    text-align: center;
+
+  }
+  #our-story .img-container .img{
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .coffee-container .img-container{
+    margin-top: 5rem;
+    width: 50%;
+
+  }
+  .title-two{
+    margin:0 auto
+  }
+  .title-three{
+    transform: translateX(40px);
+  }
+
+}
+  
